test/scc/expr/semantic-errors/140.a
140.t:2:9: error: initializer element is not constant